Small optimizations, new ! prefix for ultra-lite linking

--- a/static/style.less
+++ b/static/style.less
@@ -31,3 +31,15 @@ iframe.lazytube {
   height: 360px;
   width: 640px;
 }
+
+.youtube-lite {
+  display: inline-block;
+
+  .youtube-lite-play {
+    cursor: pointer;
+  }
+
+  .js-lazyYT {
+    display: none;
+  }
+}
